writeRaster now honours the value of the NAvalue argument when writing a ncdf file (requested by Thiago Veloso)
added support for the ncdf4 library
fixed many spelling mistakes in the documentation reported by Phil Heilman
function fourCellsFromXY is now visible.
method 'freq' implemented for 'RasterStackBrick'
new function 'layerize'

--- 27-June-2012, version 2.0-08
bug fixes (both introduced in version 2.0-04):
multilayer files of the 'raster' format have a corrupt header file (reported by Jonathan Greenberg)
subset with a RasterBrick fails because of an error when accessing the z slot (reported by Matt Fischer)
crop with a RasterStack failed
new option 'tmptime' to set after how many hours temp files may be deleted. Suggested by Shannon Albeke

--- 17-June-2012, version 2.0-04
More support for factors and (related) Raster Attribute Tables (functions ratify, deratify)
z-values are saved to file (native format only)
Old slot @zvalue removed (in favor of slot @z)
New function 'names' to (eventually) replace 'layerNames', for compatibility with sp.
New function 'proj4string' (equivalent to 'projection') for compatibility with sp.
New function 'sampleStratified'
Improved speed for creating a RasterStack from a list of RasterLayer objects (thanks to report by Jonathan Kennel), and for rasterToPoints
setValues(brick, values) now also works if the existing values (on disk) cannot be all loaded into memory (suggested by Jonathan Greenberg).
bug fixes: 
rasterize with polygons ignores the 'field' argument (bug introduced in previous version)
log failed when writing to disk (reported by Jochen Albrecht)
sampleRegular failed in some cases for a RasterStack (affecting spplot). Reported by Matthew Landis)


--- 1-May-2012, version 1.9-82
New features, improvements:
New function weighted.mean 
New function layerStats to compute the correlation, covariance and weighted covariance matrix across layers (by Jonathan Greenberg)